<resources>
    <string name="app_name">SyncTime</string>
    <string name="search_hint">Search...</string>
    <string name="chat">Chat</string>
    <string name="new_trip">New Trip</string>
    <string name="chat_info">Chat Info</string>
    <string name="places_near_you">Places Near You</string>
    <string name="google_maps_key">AIzaSyCTQk1-8I3t-qhqAAgVWoj5up67GMw5Fls</string>
    <string name="google_maps_key">AIzaSyB53M_pierhCOdkxgXjyjcxHMLrpl4JQsM</string>
    <string name="tagline">Plan Smarter,\nArrive Together.</string>
    <string name="groups">GROUPS</string>
    <string name="trip_updates">Trip Updates</string>
    <string name="arrivals">Arrivals</string>
    <string name="departures">Departures</string>
    <string name="messages">MESSAGES</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="weather_updates">Weather Updates</string>
    <string name="traffic_updates">Traffic Updates</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_DoB">Date of Birth</string>
    <string name="hint_region">Country / Region</string>
    <string name="save_changes">Save Changes</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change Password</string>
    <string name="notification_settings">Notification settings</string>
    <string name="push_notification">Push notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="more">More</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="user_profile">User Profile</string>
    <string name="language">English/Español</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notifications">Add</string>
    <string name="add">Notifications</string>
    <string name="settings">Settings</string>
    <string name="google_maps_key">AIzaSyC6PJV6xxpJKlo4gUtZhEhrUGbmB7vb_UY</string>
</resources>